[metadata]
name = MetaFEDOT
version = 0.0.1
author = NSSTeam
description = Framework for meta-optimisation in AutoML tasks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
project_urls =
    Homepage = https://github.com/ITMO-NSS-team/MetaFEDOT
    Bug Tracker = https://github.com/ITMO-NSS-team/MetaFEDOT/issues