[metadata]
name = gamlet
version = 0.0.1
author = NSS Lab
author_email = itmo.nss.team@gmail.com
description = Framework for meta-optimisation in AutoML tasks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
project_urls =
    Homepage = https://github.com/ITMO-NSS-team/GAMLET
    Bug Tracker = https://github.com/ITMO-NSS-team/GAMLET/issues

[options]
package_dir =
    meta_automl = meta_automl
install_requires = file: requirements.txt
